[package]
name = "github-user-activity"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ghua"  # The new name for the CLI tool
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
dotenvy = "0.15.7"
regex = "1.11.1"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
